# cim-domain-git

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TEST_NOTES.md  LICENSE  LICENSE-APACHE  README.md  TEST_SUMMARY.md  check_code.sh  flake.nix  progress.json
.github/workflows/: ci.yml  release.yml
doc/: api.md  completion-summary.md  graph-analysis.md  user-stories.md
doc/design/: git-domain-design.md
doc/plan/: implementation-plan.md
doc/status/: ASYNC_NATS_UPDATE.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  FINAL_TEST_STATUS.md  GRAPH_ANALYTICS_STATUS.md  completion-summary.md
docs/: DESIGN_CT.md  DESIGN_VERIFICATION.md  PROGRESS.md  SPRINT_PLAN.md
examples/: distributed_tracing.rs  git_to_graph.rs  git_to_graph.rs.disabled  graph_analysis_demo.rs  jetstream_event_sourcing.rs  nats_complete_integration.rs  nats_integration_demo.rs
scripts/: clean_test_streams.sh  nix-check.sh  test_coverage.sh  test_report.sh
src/: cache.rs  dependency_analysis.rs  dependency_analysis_safe.rs  lib.rs  security.rs
src/aggregate/: mod.rs
src/analyzers/: code_quality_analyzer.rs  collaboration_analyzer.rs  mod.rs
src/commands/: analyze_for_graphs.rs  mod.rs
src/events/: code_quality_events.rs  collaboration_events.rs  envelope.rs  envelope_tests.rs  metadata.rs  metadata_tests.rs  mod.rs
src/handlers/: cqrs_adapter.rs  mod.rs
src/handlers/commands/: mod.rs
src/nats/: client.rs  command_ack.rs  config.rs  config_tests.rs  error.rs  error_tests.rs  event_store.rs  health.rs  mod.rs  projection.rs  publisher.rs  subject.rs  subject_tests.rs  subscriber.rs  subscriber_tests.rs  tracing.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/value_objects/: mod.rs  tests.rs
tests/: basic_test.rs  event_tests.rs  handler_tests.rs  integration_test.rs  nats_integration_test.rs  nats_integration_tests.rs
