[package]
name = "cim-domain-git"
version = "0.3.0"
edition = "2021"
authors = ["Cowboy AI, LLC <dev@thecowboy.ai>"]
description = "Git domain module for CIM - comprehensive Git repository introspection and analysis"
documentation = "https://docs.rs/cim-domain-git"
homepage = "https://github.com/thecowboyai/cim-domain-git"
repository = "https://github.com/thecowboyai/cim-domain-git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["git", "domain", "cim", "event-sourcing", "ddd"]
categories = ["development-tools", "data-structures"]
exclude = [
    ".github/",
    "tests/",
    "examples/",
    "benches/",
    ".gitignore",
    ".git/",
    "*.log",
    "target/",
]

[dependencies]
# Core CIM dependencies
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", branch = "main" }
cim-ipld = { git = "https://github.com/TheCowboyAI/cim-ipld.git", branch = "main" }
cim-subject = { git = "https://github.com/TheCowboyAI/cim-subject.git", branch = "main" }

# Domain dependencies
# cim-domain-graph = { path = "../cim-domain-graph" }
# cim-domain-document = { path = "../cim-domain-document" }
# cim-domain-agent = { path = "../cim-domain-agent" }

# Git functionality
git2 = "0.19"
# gix = { version = "0.68", features = ["max-performance"] } # Temporarily disabled due to build issues

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# NATS dependencies
async-nats = "0.42"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"

# Tracing dependencies (temporarily disabled due to system dependency issues)
# opentelemetry = { version = "0.21", features = ["trace"] }
# opentelemetry_sdk = { version = "0.21", features = ["trace", "rt-tokio"] }
# opentelemetry-otlp = { version = "0.14", features = ["tonic", "trace"] }
# opentelemetry-stdout = { version = "0.2", features = ["trace"] }

# Collections
indexmap = "2.7"

# Pattern matching
regex = "1.11"
lazy_static = "1.5"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.14"
pretty_assertions = "1.4"
proptest = "1.6"

# Fixtures
once_cell = "1.20"

# Examples
tracing-subscriber = "0.3"

[features]
default = []
# Enable GitHub MCP integration
github-mcp = []
# Enable advanced Git analysis features
advanced-analysis = []

[[example]]
name = "nats_integration_demo"
path = "examples/nats_integration_demo.rs"

[[example]]
name = "jetstream_event_sourcing"
path = "examples/jetstream_event_sourcing.rs"

[[example]]
name = "nats_complete_integration"
path = "examples/nats_complete_integration.rs"

# [[example]]
# name = "distributed_tracing"
# path = "examples/distributed_tracing.rs"
